[tool.poetry]
name = "heim"
version = "0.1.0"
description = ""
authors = ["Sigurd Ljødal <sigurd@ljodal.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.0"
asyncpg = "^0.28.0"
pydantic = "^2.4.2"
structlog = "^23.1.0"
croniter = "^2.0.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
click = "^8.0.3"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
ipython = "^8.16.1"
types-croniter = "^2.0.0.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.6.1"
pytest-cov = "^4.1.0"
asyncpg-stubs = "^0.28.0"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
python-lsp-server = {version = "^1.8.0", extras = ["flake8"]}
pylsp-mypy = "^0.6.7"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.3.0"

[tool.poetry.scripts]
heim = "heim.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
src = ["heim", "tests"]
target-version = ['py312']

[tool.isort]
profile = "black"
src_paths= ["heim", "test"]

[tool.mypy]
python_version = "3.12"
files = ["heim", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
