[project]
name = "heim"
version = "0.1.0"
description = ""
authors = [{ name = "Sigurd Ljødal", email = "sigurd@ljodal.no" }]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "asyncpg>=0.31",
    "pydantic>=2",
    "structlog>=25",
    "croniter>=6",
    "fastapi>=0.128",
    "uvicorn>=0.40",
    "gunicorn>=24",
    "click>=8",
    "python-multipart>=0.0.21",
    "sentry-sdk[fastapi,asyncpg]>=2",
    "prometheus-fastapi-instrumentator>=7",
    "jinja2>=3",
]

[project.scripts]
heim = "heim.cli:cli"

[dependency-groups]
dev = [
    "black>=26",
    "mypy>=1",
    "isort>=7",
    "flake8>=7",
    "flake8-bugbear>=25",
    "ipython>=9",
    "types-croniter>=6",
    "pytest>=9",
    "pytest-asyncio>=1",
    "pytest-mock>=3",
    "pytest-cov>=7",
    "asyncpg-stubs>=0.31",
]
lsp = [
    "python-lsp-server[flake8]>=1.8.0",
    "pylsp-mypy>=0.6.7",
    "pyls-isort>=0.2.2",
    "python-lsp-black>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
src = ["heim", "tests"]
target-version = ['py312']

[tool.isort]
profile = "black"
src_paths = ["heim", "test"]

[tool.mypy]
python_version = "3.14"
files = ["heim", "tests"]
plugins = ["pydantic.mypy"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
